# calcweaver

./: .gitignore  LICENSE  README.md  pyproject.toml
calcweaver/: __init__.py  error.py  graph.py  knot.py  parser.py  utils.py  visualize.py  weave.py
tests/: test_basic_functionality.py
