[tool.poetry]
name = "calcweaver"
version = "0.1.1a0"
description = ""
authors = ["Vishal Kumar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
graphviz = {version = ">=0.20.1", extras = ["all"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
